--- a/css/main.css
+++ b/css/main.css
@@ -65,3 +65,11 @@ nav > a.active {
 		padding: 0px 100px 0px 100px;
 	}
 }
+
+@media (max-width: 767px) {
+		html, body {
+		max-width: 100%;
+		overflow-x: hidden;
+	}
+}
+}
